 (Format: Year/Month/Day)
Changes for 0.9.16:
*06/06/10:
   * Fix some external tab alignment on shade (Simon)
     FbWinFrame.cc
   * Fix container size rounding for right alignment (Simon)
     Container.cc
*06/06/01:
   * Update of new manpage (thanx Guillermo Patterer)
*06/05/23:
   * Spanish Translation of the new manpage (thanx Guillermo Patterer)
     doc/asciidoc/fluxbox.es.txt
*06/05/22:
   * Fix handling of ParentRelative background (Simon)
     FbWindow.cc
*06/05/21:
   * Fix build on cygwin (iconv const error) (Simon)
     FbTk/FbString.cc
   * Fix background of external tabs when label background is 
     ParentRelative (Simon)
     FbWinFrame.cc
   * Improve native language support handling, especially relating
     to codesets (Simon)
     *** Please report any oddness (Esp regressions) in native text
     - Makefile.am can now specify several target codesets
     - generated-*.m files are automatically generated, but not on 
       every build, only on new additions.
     - I18N::getMessage now returns FbString's
     - Menu labels are passed as FbString&e s, not char *s.
     nls/*/Makefile.am nls/*/generated*.m
     src/ ... lots of files (most things menu or translation-related)
*06/05/17:
   * Fix transparency on multiple screens & possibly bad root bg atom
     reading (Simon)
     FbTk/FbPixmap.cc
*06/05/16:
   * Fix bug with horizontal maximisation when quadrant resizing (Mathias)
     Window.hh/cc
*06/05/13:
   * Fixed some title redraw issues (Thanks _markt)
     WinClient.cc, Window.cc
   * Added support for _NET_WM_STATE_DEMANDS_ATTENTION . (Henrik)
     When this state is set fluxbox will start flashing 
     the titlebar and button in the toolbar. It will stop when the window
     is focused.
     The blink rate can be configured with the following resource:
     session.screen0.demandsAttentionTimeout: <timeout in milliseconds>
     Default value is 500.
     If the value is zero this feature will be disabled.